[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/NPC.gd" type="Script" id=1]
[ext_resource path="res://assets/char/john_old/john_idle_00.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 64.6229, 10 )

[node name="NPC" type="Node2D" index="0"]

script = ExtResource( 1 )
sprite = null

[node name="Sprite" type="Sprite" parent="." index="0"]

modulate = Color( 1, 0, 0, 0.121529 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="InteractArea" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea" index="0"]

shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_entered" from="InteractArea" to="." method="_on_InteractArea_body_entered"]

[connection signal="body_exited" from="InteractArea" to="." method="_on_InteractArea_body_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


